--- a/mLingo/ClientApp/public/index.html
+++ b/mLingo/ClientApp/public/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <base href="%PUBLIC_URL%/" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- Bootstrap CDN-->
     <!-- Latest compiled and minified CSS -->
     <link
@@ -58,4 +59,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </html>
