--- a/mLingo/ClientApp/public/index.html
+++ b/mLingo/ClientApp/public/index.html
@@ -59,5 +59,13 @@
 <script>
   AOS.init();
 </script>
+<script>
+    if('serviceWorker' in navigator ) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./serviceWorker.js')
+        .then( reg => console.log('Success: ', reg.scope))
+      })
+    }
+</script>
 
 </html>
