--- a/mLingo/ClientApp/public/index.html
+++ b/mLingo/ClientApp/public/index.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  <base href="%PUBLIC_URL%/" />
+  <base href="/"/>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <!-- Bootstrap CDN-->
   <!-- Latest compiled and minified CSS -->
@@ -21,17 +21,15 @@
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
-  <!-- ios support -->
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon96x96.png"/>
+  -->
+  <link rel="manifest" href="./manifest.json" />
+  <link rel="shortcut icon" href="./favicon.svg" />
+  <link rel="apple-touch-icon" href="./icons/icon96x96.png"/>
   <meta name="apple-mobile-web-app-status-bar" content="#000536"/>
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
@@ -47,10 +45,8 @@
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
-
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
@@ -58,14 +54,6 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
   AOS.init();
-</script>
-<script>
-    if('serviceWorker' in navigator ) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./serviceWorker.js')
-        .then( reg => console.log('Success: ', reg.scope))
-      })
-    }
 </script>
 
 </html>
